--- a/manifests/2.deployment.yml
+++ b/manifests/2.deployment.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: mysqldb
-        image: shaikmustafa/clientapp:appimage
+        image: ramu883/clientapp:appimage
         ports:
         - containerPort: 80
         env:
