--- a/manifests/4.statefulset.yml
+++ b/manifests/4.statefulset.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: shaikmustafa/clientapp:dbimage
+        image: ramu883/clientapp:dbimage
         ports:
         - containerPort: 80
           name: web
